# plotting_climate_stripes_DE

./: .gitignore  0_init_dir.py  LICENSE  README.md  plotting_climate_stripes.py  plotting_climate_stripes_function.py  pyproject.toml  run_stripes.py  x_weather_plot.ipynb
paper/: main.tex
plots/: config.py
