[project]
        name = "plotting_climate_stripes_de"
        version = "0.1.0"
        description = "This is a project"
        authors = [{ name = "Clara Vydra", email = "clara@mainotter.de" }]       
        readme = "README.md"
        license = { text = "CC-BY-NC-SA-4.0" }
        requires-python = ">=3.11"
        dependencies = [
            "geopandas>=1.1.1",
            "hda>=2.34",
            "ipykernel>=7.1.0",
            "matplotlib>=3.10.7",
            "rioxarray>=0.19.0",
            "seaborn>=0.13.2",
            "xarray>=2025.10.1",
            "zarr>=3.1.3",
            "cdsapi>=0.7.7",
            "dask>=2025.10.0",
            "distributed>=2025.10.0",
            "folium>=0.20.0",
            "ipykernel>=7.1.0",
            "odc>=0.1.2",
            "odc-stac>=0.4.0",
            "wetterdienst>=0.116.0",
]

        [project.optional-dependencies]
        dev = ["pytest"]
